# Red-de-Bienestar-Animal

./: .gitignore  AddPetPopup.qml  CMakeLists.txt  DashboardView.qml  Header.qml  LostFoundView.qml  Main.qml  PetImageGallery.qml  README.md  Theme.qml  ViewSwitch.qml  main.cpp  mainrespaldo.txt  mapmanager.cpp  mapmanager.h  rescuereport.h
GuardianAnimal/: ApplicationScreen.qml  CMakeLists.txt  FloatingActionButton.qml  Header.qml  Main.qml  UserSession.qml  ViewSwitch.qml  main.cpp
GuardianAnimal/ApplicationViews/: AdoptionView.qml  CMakeLists.txt  DashboardView.qml  HappyTailsView.qml  HistoryView.qml  LostFoundView.qml  NavigationView.qml  PetDetailView.qml  PetImageGallery.qml  ReportView.qml  RescueListView.qml  ReunitedView.qml
GuardianAnimal/Popups/: AddPetPopup.qml  AdoptionFilter.qml  CMakeLists.txt  OutcomeModal.qml  ProfilePopup.qml  ReportLostFoundPopup.qml
GuardianAnimal/Start/: CMakeLists.txt  LoginScreen.qml  PermissionsScreen.qml  SplashScreen.qml
GuardianAnimal/headers/: animalrecord.h  animalroles.h  googlemapsmanager.h  jobticket.h  kdtree.h  maxheap.h  rescuemodel.h  rescuesystem.h
GuardianAnimal/icons/: CMakeLists.txt
GuardianAnimal/src/: animalrecord.cpp  animalroles.cpp  googlemapsmanager.cpp  jobticket.cpp  kdtree.cpp  maxheap.cpp  rescuemodel.cpp  rescuesystem.cpp
appProjectTest/: AdoptionFilter.qml  AdoptionView.qml  ApplicationScreen.qml  CMakeLists.txt  Main.qml  NavigationView.qml  ReportLostFoundPopup.qml  RescueListView.qml  main.cpp
